<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/textViewlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"

            android:translationY="100dp" />


        <EditText
            android:id="@+id/code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewlogin"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="200dp"
            android:ems="6"
            android:hint="@string/space"
            android:inputType="numberPassword"

            android:textAlignment="center"
            android:textSize="23sp"
            android:translationY="130dp" />

        <TextView
            android:id="@+id/ed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/code"
            android:layout_centerHorizontal="true"
            android:text="@string/enterdigit"
            android:textAlignment="center"
            android:textColor="#48000000"
            android:textSize="20sp"
            android:translationY="-55dp" />

        <Button
            android:id="@+id/otpnext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ed"
            android:layout_centerHorizontal="true"
            android:backgroundTint="#FFEB3B"
            android:text="Verify" />


    </RelativeLayout>
</RelativeLayout>